// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SideItem render as dependency 1`] = `

<div>
  <div class="group relative z-10">
    <gui-card
      role="article"
      classname="relative my-4 transition-all  cursor-pointer group-hover:border-neutral-400 dark:group-hover:border-neutral-600"
    >
      <gui-card-header classname="relative flex w-full flex-col rounded-t-lg p-0">
        <div class="flex items-center px-3 py-2">
          <gui-card-title classname="flex flex-1 items-center gap-2 text-sm">
            <span class="font-medium">
              item
            </span>
            <span class="font-normal text-muted-foreground">
              v1.0.0
            </span>
          </gui-card-title>
        </div>
        <div class="flex flex-row flex-wrap items-center justify-between gap-2 border-t-[1px] border-muted-foreground/20 px-3 py-2">
          <p class="flex items-center gap-2 text-sm text-muted-foreground">
            Spec:
            <span class="flex items-center justify-center rounded-sm bg-neutral-700/5 px-2 py-1 font-[courier] text-xs dark:bg-neutral-700/50">
            </span>
          </p>
          <div>
            <gui-badge classname="grow-0 border-transparent bg-lime-100 text-neutral-900 hover:bg-lime-100/80">
              peer
            </gui-badge>
          </div>
        </div>
      </gui-card-header>
    </gui-card>
    <div
      class="absolute -left-[9px] bottom-[62px] z-0 h-[13.35rem] h-[5px] w-[9px] rounded-bl-sm border-b border-l border-solid border-neutral-300 group-[&amp;:nth-child(2)]:hidden group-[&amp;:nth-child(3)]:h-24 dark:border-neutral-600"
      style="height: -258px;"
    >
    </div>
  </div>
</div>

`;

exports[`SideItem render as dependency with long name 1`] = `

<div>
  <div class="group relative z-10">
    <gui-card
      role="article"
      classname="relative my-4 transition-all  cursor-pointer group-hover:border-neutral-400 dark:group-hover:border-neutral-600"
    >
      <gui-card-header classname="relative flex w-full flex-col rounded-t-lg p-0">
        <div class="flex items-center px-3 py-2">
          <gui-card-title classname="flex flex-1 items-center gap-2 text-sm">
            <span class="font-medium">
              lorem-ipsum-dolor-sit-amet-consectetur-adipiscing-elit-sed-do-eiusmod-tempor-incididunt-ut-labore-et-dolore-magna-aliqua-ut-enim-ad-minim-veniam-quis-nostrud-exercitation
            </span>
            <span class="font-normal text-muted-foreground">
              v1.0.0
            </span>
          </gui-card-title>
        </div>
        <div class="flex flex-row flex-wrap items-center justify-between gap-2 border-t-[1px] border-muted-foreground/20 px-3 py-2">
          <p class="flex items-center gap-2 text-sm text-muted-foreground">
            Spec:
            <span class="flex items-center justify-center rounded-sm bg-neutral-700/5 px-2 py-1 font-[courier] text-xs dark:bg-neutral-700/50">
            </span>
          </p>
          <div>
            <gui-badge classname="grow-0 border-transparent bg-lime-100 text-neutral-900 hover:bg-lime-100/80">
              peer
            </gui-badge>
          </div>
        </div>
      </gui-card-header>
    </gui-card>
    <div
      class="absolute -left-[9px] bottom-[62px] z-0 h-[13.35rem] h-[5px] w-[9px] rounded-bl-sm border-b border-l border-solid border-neutral-300 group-[&amp;:nth-child(2)]:hidden group-[&amp;:nth-child(3)]:h-24 dark:border-neutral-600"
      style="height: -258px;"
    >
    </div>
  </div>
</div>

`;

exports[`SideItem render as dependent 1`] = `

<div>
  <div class="group relative z-10">
    <gui-card
      role="article"
      classname="relative my-4 transition-all  cursor-pointer group-hover:border-neutral-400 dark:group-hover:border-neutral-600"
    >
      <gui-card-header classname="relative flex w-full flex-col rounded-t-lg p-0">
        <div class="flex items-center px-3 py-2">
          <gui-card-title classname="flex flex-1 items-center gap-2 text-sm">
            <span class="font-medium">
              item
            </span>
            <span class="font-normal text-muted-foreground">
              v1.0.0
            </span>
          </gui-card-title>
        </div>
        <div class="flex flex-row flex-wrap items-center justify-between gap-2 border-t-[1px] border-muted-foreground/20 px-3 py-2">
          <p class="flex items-center gap-2 text-sm text-muted-foreground">
            Spec:
            <span class="flex items-center justify-center rounded-sm bg-neutral-700/5 px-2 py-1 font-[courier] text-xs dark:bg-neutral-700/50">
            </span>
          </p>
          <div>
            <gui-badge classname="grow-0 border-transparent bg-cyan-100 text-neutral-900 hover:bg-cyan-100/80">
              prod
            </gui-badge>
          </div>
        </div>
      </gui-card-header>
    </gui-card>
  </div>
</div>

`;

exports[`SideItem render as multi-stacked dependent 1`] = `

<div>
  <div class="group relative z-10">
    <div class="absolute left-2 top-2 h-full w-[96%] rounded-lg border bg-card transition-all group-hover:border-neutral-400 dark:group-hover:border-neutral-600">
    </div>
    <div class="absolute left-1 top-1 h-full w-[98%] rounded-lg border bg-card transition-all group-hover:border-neutral-400 dark:group-hover:border-neutral-600">
    </div>
    <gui-card
      role="article"
      classname="relative my-4 transition-all  cursor-pointer group-hover:border-neutral-400 dark:group-hover:border-neutral-600"
    >
      <gui-card-header classname="relative flex w-full flex-col rounded-t-lg p-0">
        <div class="flex items-center px-3 py-2">
          <gui-card-title classname="flex flex-1 items-center gap-2 text-sm">
            <span class="font-medium">
              item
            </span>
            <span class="font-normal text-muted-foreground">
              v1.0.0
            </span>
          </gui-card-title>
        </div>
        <div class="flex flex-row flex-wrap items-center justify-between gap-2 border-t-[1px] border-muted-foreground/20 px-3 py-2">
          <p class="flex items-center gap-2 text-sm text-muted-foreground">
            Spec:
            <span class="flex items-center justify-center rounded-sm bg-neutral-700/5 px-2 py-1 font-[courier] text-xs dark:bg-neutral-700/50">
            </span>
          </p>
          <div>
            <gui-badge classname="grow-0 border-transparent bg-cyan-100 text-neutral-900 hover:bg-cyan-100/80">
              prod
            </gui-badge>
          </div>
        </div>
      </gui-card-header>
    </gui-card>
  </div>
</div>

`;

exports[`SideItem render as parent 1`] = `

<div>
  <div class="group relative z-10">
    <gui-card
      role="article"
      classname="relative my-4 transition-all border-foreground cursor-pointer group-hover:border-neutral-400 dark:group-hover:border-neutral-600"
    >
      <gui-card-header classname="relative flex w-full flex-col rounded-t-lg p-0">
        <div class="flex items-center px-3 py-2">
          <gui-card-title classname="flex flex-1 items-center gap-2 text-sm">
            <span class="font-medium">
              item
            </span>
            <span class="font-normal text-muted-foreground">
              v1.0.0
            </span>
          </gui-card-title>
        </div>
        <div class="flex flex-row flex-wrap items-center justify-between gap-2 border-t-[1px] border-muted-foreground/20 px-3 py-2">
          <p class="flex items-center gap-2 text-sm text-muted-foreground">
            Spec:
            <span class="flex items-center justify-center rounded-sm bg-neutral-700/5 px-2 py-1 font-[courier] text-xs dark:bg-neutral-700/50">
            </span>
          </p>
          <div>
            <gui-badge classname="grow-0 border-transparent bg-cyan-100 text-neutral-900 hover:bg-cyan-100/80">
              prod
            </gui-badge>
          </div>
        </div>
      </gui-card-header>
    </gui-card>
    <div class="absolute -right-4 top-7 w-4 border-t border-solid border-muted-foreground">
    </div>
  </div>
</div>

`;

exports[`SideItem render as two-stacked dependent 1`] = `

<div>
  <div class="group relative z-10">
    <div class="absolute left-1 top-1 h-full w-[98%] rounded-lg border bg-card transition-all group-hover:border-neutral-400 dark:group-hover:border-neutral-600">
    </div>
    <gui-card
      role="article"
      classname="relative my-4 transition-all  cursor-pointer group-hover:border-neutral-400 dark:group-hover:border-neutral-600"
    >
      <gui-card-header classname="relative flex w-full flex-col rounded-t-lg p-0">
        <div class="flex items-center px-3 py-2">
          <gui-card-title classname="flex flex-1 items-center gap-2 text-sm">
            <span class="font-medium">
              item
            </span>
            <span class="font-normal text-muted-foreground">
              v1.0.0
            </span>
          </gui-card-title>
        </div>
        <div class="flex flex-row flex-wrap items-center justify-between gap-2 border-t-[1px] border-muted-foreground/20 px-3 py-2">
          <p class="flex items-center gap-2 text-sm text-muted-foreground">
            Spec:
            <span class="flex items-center justify-center rounded-sm bg-neutral-700/5 px-2 py-1 font-[courier] text-xs dark:bg-neutral-700/50">
            </span>
          </p>
          <div>
            <gui-badge classname="grow-0 border-transparent bg-cyan-100 text-neutral-900 hover:bg-cyan-100/80">
              prod
            </gui-badge>
          </div>
        </div>
      </gui-card-header>
    </gui-card>
  </div>
</div>

`;
